# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "twilight-bot-utils"
version = "0.1.0"
edition = "2021"
rust-version = "1.56.1"


[dependencies.async-trait]
version = "0.1"

[dependencies.chrono]
version = "0.4"

[dependencies.dotenv]
version = "0.15"

[dependencies.futures]
version = "0.3"

[dependencies.num_cpus]
version = "1.13.1"

[dependencies.tokio]
version = "1"
features = ["full"]

[dependencies.twilight-cache-inmemory]
version = "0.8.3"

[dependencies.twilight-embed-builder]
version = "0.8.0"

[dependencies.twilight-gateway]
version = "0.8.2"

[dependencies.twilight-http]
version = "0.8.3"

[dependencies.twilight-mention]
version = "0.8.0"

[dependencies.twilight-model]
version = "0.8.3"

[dependencies.twilight-standby]
version = "0.8.1"

[dependencies.twilight-util]
version = "0.8.1"
features = ["builder", "link", "permission-calculator", "snowflake"]
