# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "twilight-bot-utils"
version = "0.1.0"
edition = "2021"
rust-version = "1.56.1"


[dependencies.async-trait]
version = "~0.1.53"

[dependencies.chrono]
version = "~0.4.19"

[dependencies.dotenv]
version = "~0.15.0"

[dependencies.futures]
version = "~0.3.21"

[dependencies.lazy_static]
version = "~1.4.0"

[dependencies.num_cpus]
version = "~1.13.1"

[dependencies.tokio]
version = "~1.18.0"
features = ["full"]

[dependencies.twilight-gateway]
version = "~0.10.1"

[dependencies.twilight-http]
version = "~0.10.2"

[dependencies.twilight-mention]
version = "~0.10.0"

[dependencies.twilight-model]
version = "~0.10.2"

[dependencies.twilight-standby]
version = "~0.10.0"

[dependencies.twilight-util]
version = "~0.10.1"
features = ["builder", "link", "permission-calculator", "snowflake"]
